# serializer version: 1
# name: test_select_entities[select.fanlinc_lamp_ramp_rate-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        '9.0 min',
        '8.0 min',
        '7.0 min',
        '6.0 min',
        '5.0 min',
        '4.5 min',
        '4.0 min',
        '3.5 min',
        '3.0 min',
        '2.5 min',
        '2.0 min',
        '1.5 min',
        '1.0 min',
        '47 s',
        '43 s',
        '38.5 s',
        '34 s',
        '32 s',
        '30 s',
        '28 s',
        '26 s',
        '23.5 s',
        '21.5 s',
        '19 s',
        '8.5 s',
        '6.5 s',
        '4.5 s',
        '2 s',
        '0.5 s',
        '0.3 s',
        '0.2 s',
        '0.1 s',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.fanlinc_lamp_ramp_rate',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Ramp Rate',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Ramp Rate',
    'platform': 'udi_iox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'aa:bb:cc:dd:ee:ff_EE EE EE 1_RR',
    'unit_of_measurement': None,
  })
# ---
# name: test_select_entities[select.fanlinc_lamp_ramp_rate-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'FanLinc Lamp Ramp Rate',
      'options': list([
        '9.0 min',
        '8.0 min',
        '7.0 min',
        '6.0 min',
        '5.0 min',
        '4.5 min',
        '4.0 min',
        '3.5 min',
        '3.0 min',
        '2.5 min',
        '2.0 min',
        '1.5 min',
        '1.0 min',
        '47 s',
        '43 s',
        '38.5 s',
        '34 s',
        '32 s',
        '30 s',
        '28 s',
        '26 s',
        '23.5 s',
        '21.5 s',
        '19 s',
        '8.5 s',
        '6.5 s',
        '4.5 s',
        '2 s',
        '0.5 s',
        '0.3 s',
        '0.2 s',
        '0.1 s',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.fanlinc_lamp_ramp_rate',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_select_entities[select.hallway_light_hallway_button_b_backlight-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'On  0 / Off 0',
        'On  1 / Off 0',
        'On  2 / Off 0',
        'On  3 / Off 0',
        'On  4 / Off 0',
        'On  5 / Off 0',
        'On  6 / Off 0',
        'On  7 / Off 0',
        'On  8 / Off 0',
        'On  9 / Off 0',
        'On 10 / Off 0',
        'On 11 / Off 0',
        'On 12 / Off 0',
        'On 13 / Off 0',
        'On 14 / Off 0',
        'On 15 / Off 0',
        'On  0 / Off 1',
        'On  1 / Off 1',
        'On  2 / Off 1',
        'On  3 / Off 1',
        'On  4 / Off 1',
        'On  5 / Off 1',
        'On  6 / Off 1',
        'On  7 / Off 1',
        'On  8 / Off 1',
        'On  9 / Off 1',
        'On 10 / Off 1',
        'On 11 / Off 1',
        'On 12 / Off 1',
        'On 13 / Off 1',
        'On 14 / Off 1',
        'On 15 / Off 1',
        'On  0 / Off 2',
        'On  1 / Off 2',
        'On  2 / Off 2',
        'On  3 / Off 2',
        'On  4 / Off 2',
        'On  5 / Off 2',
        'On  6 / Off 2',
        'On  7 / Off 2',
        'On  8 / Off 2',
        'On  9 / Off 2',
        'On 10 / Off 2',
        'On 11 / Off 2',
        'On 12 / Off 2',
        'On 13 / Off 2',
        'On 14 / Off 2',
        'On 15 / Off 2',
        'On  0 / Off 3',
        'On  1 / Off 3',
        'On  2 / Off 3',
        'On  3 / Off 3',
        'On  4 / Off 3',
        'On  5 / Off 3',
        'On  6 / Off 3',
        'On  7 / Off 3',
        'On  8 / Off 3',
        'On  9 / Off 3',
        'On 10 / Off 3',
        'On 11 / Off 3',
        'On 12 / Off 3',
        'On 13 / Off 3',
        'On 14 / Off 3',
        'On 15 / Off 3',
        'On  0 / Off 4',
        'On  1 / Off 4',
        'On  2 / Off 4',
        'On  3 / Off 4',
        'On  4 / Off 4',
        'On  5 / Off 4',
        'On  6 / Off 4',
        'On  7 / Off 4',
        'On  8 / Off 4',
        'On  9 / Off 4',
        'On 10 / Off 4',
        'On 11 / Off 4',
        'On 12 / Off 4',
        'On 13 / Off 4',
        'On 14 / Off 4',
        'On 15 / Off 4',
        'On  0 / Off 5',
        'On  1 / Off 5',
        'On  2 / Off 5',
        'On  3 / Off 5',
        'On  4 / Off 5',
        'On  5 / Off 5',
        'On  6 / Off 5',
        'On  7 / Off 5',
        'On  8 / Off 5',
        'On  9 / Off 5',
        'On 10 / Off 5',
        'On 11 / Off 5',
        'On 12 / Off 5',
        'On 13 / Off 5',
        'On 14 / Off 5',
        'On 15 / Off 5',
        'On  0 / Off 6',
        'On  1 / Off 6',
        'On  2 / Off 6',
        'On  3 / Off 6',
        'On  4 / Off 6',
        'On  5 / Off 6',
        'On  6 / Off 6',
        'On  7 / Off 6',
        'On  8 / Off 6',
        'On  9 / Off 6',
        'On 10 / Off 6',
        'On 11 / Off 6',
        'On 12 / Off 6',
        'On 13 / Off 6',
        'On 14 / Off 6',
        'On 15 / Off 6',
        'On  0 / Off 7',
        'On  1 / Off 7',
        'On  2 / Off 7',
        'On  3 / Off 7',
        'On  4 / Off 7',
        'On  5 / Off 7',
        'On  6 / Off 7',
        'On  7 / Off 7',
        'On  8 / Off 7',
        'On  9 / Off 7',
        'On 10 / Off 7',
        'On 11 / Off 7',
        'On 12 / Off 7',
        'On 13 / Off 7',
        'On 14 / Off 7',
        'On 15 / Off 7',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.hallway_light_hallway_button_b_backlight',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Hallway Button B Backlight',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Hallway Button B Backlight',
    'platform': 'udi_iox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'aa:bb:cc:dd:ee:ff_AA AA AA 2_BL',
    'unit_of_measurement': None,
  })
# ---
# name: test_select_entities[select.hallway_light_hallway_button_b_backlight-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'assumed_state': True,
      'friendly_name': 'Hallway Light Hallway Button B Backlight',
      'options': list([
        'On  0 / Off 0',
        'On  1 / Off 0',
        'On  2 / Off 0',
        'On  3 / Off 0',
        'On  4 / Off 0',
        'On  5 / Off 0',
        'On  6 / Off 0',
        'On  7 / Off 0',
        'On  8 / Off 0',
        'On  9 / Off 0',
        'On 10 / Off 0',
        'On 11 / Off 0',
        'On 12 / Off 0',
        'On 13 / Off 0',
        'On 14 / Off 0',
        'On 15 / Off 0',
        'On  0 / Off 1',
        'On  1 / Off 1',
        'On  2 / Off 1',
        'On  3 / Off 1',
        'On  4 / Off 1',
        'On  5 / Off 1',
        'On  6 / Off 1',
        'On  7 / Off 1',
        'On  8 / Off 1',
        'On  9 / Off 1',
        'On 10 / Off 1',
        'On 11 / Off 1',
        'On 12 / Off 1',
        'On 13 / Off 1',
        'On 14 / Off 1',
        'On 15 / Off 1',
        'On  0 / Off 2',
        'On  1 / Off 2',
        'On  2 / Off 2',
        'On  3 / Off 2',
        'On  4 / Off 2',
        'On  5 / Off 2',
        'On  6 / Off 2',
        'On  7 / Off 2',
        'On  8 / Off 2',
        'On  9 / Off 2',
        'On 10 / Off 2',
        'On 11 / Off 2',
        'On 12 / Off 2',
        'On 13 / Off 2',
        'On 14 / Off 2',
        'On 15 / Off 2',
        'On  0 / Off 3',
        'On  1 / Off 3',
        'On  2 / Off 3',
        'On  3 / Off 3',
        'On  4 / Off 3',
        'On  5 / Off 3',
        'On  6 / Off 3',
        'On  7 / Off 3',
        'On  8 / Off 3',
        'On  9 / Off 3',
        'On 10 / Off 3',
        'On 11 / Off 3',
        'On 12 / Off 3',
        'On 13 / Off 3',
        'On 14 / Off 3',
        'On 15 / Off 3',
        'On  0 / Off 4',
        'On  1 / Off 4',
        'On  2 / Off 4',
        'On  3 / Off 4',
        'On  4 / Off 4',
        'On  5 / Off 4',
        'On  6 / Off 4',
        'On  7 / Off 4',
        'On  8 / Off 4',
        'On  9 / Off 4',
        'On 10 / Off 4',
        'On 11 / Off 4',
        'On 12 / Off 4',
        'On 13 / Off 4',
        'On 14 / Off 4',
        'On 15 / Off 4',
        'On  0 / Off 5',
        'On  1 / Off 5',
        'On  2 / Off 5',
        'On  3 / Off 5',
        'On  4 / Off 5',
        'On  5 / Off 5',
        'On  6 / Off 5',
        'On  7 / Off 5',
        'On  8 / Off 5',
        'On  9 / Off 5',
        'On 10 / Off 5',
        'On 11 / Off 5',
        'On 12 / Off 5',
        'On 13 / Off 5',
        'On 14 / Off 5',
        'On 15 / Off 5',
        'On  0 / Off 6',
        'On  1 / Off 6',
        'On  2 / Off 6',
        'On  3 / Off 6',
        'On  4 / Off 6',
        'On  5 / Off 6',
        'On  6 / Off 6',
        'On  7 / Off 6',
        'On  8 / Off 6',
        'On  9 / Off 6',
        'On 10 / Off 6',
        'On 11 / Off 6',
        'On 12 / Off 6',
        'On 13 / Off 6',
        'On 14 / Off 6',
        'On 15 / Off 6',
        'On  0 / Off 7',
        'On  1 / Off 7',
        'On  2 / Off 7',
        'On  3 / Off 7',
        'On  4 / Off 7',
        'On  5 / Off 7',
        'On  6 / Off 7',
        'On  7 / Off 7',
        'On  8 / Off 7',
        'On  9 / Off 7',
        'On 10 / Off 7',
        'On 11 / Off 7',
        'On 12 / Off 7',
        'On 13 / Off 7',
        'On 14 / Off 7',
        'On 15 / Off 7',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.hallway_light_hallway_button_b_backlight',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_select_entities[select.hallway_light_ramp_rate-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        '9.0 min',
        '8.0 min',
        '7.0 min',
        '6.0 min',
        '5.0 min',
        '4.5 min',
        '4.0 min',
        '3.5 min',
        '3.0 min',
        '2.5 min',
        '2.0 min',
        '1.5 min',
        '1.0 min',
        '47 s',
        '43 s',
        '38.5 s',
        '34 s',
        '32 s',
        '30 s',
        '28 s',
        '26 s',
        '23.5 s',
        '21.5 s',
        '19 s',
        '8.5 s',
        '6.5 s',
        '4.5 s',
        '2 s',
        '0.5 s',
        '0.3 s',
        '0.2 s',
        '0.1 s',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.hallway_light_ramp_rate',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Ramp Rate',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Ramp Rate',
    'platform': 'udi_iox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'aa:bb:cc:dd:ee:ff_AA AA AA 1_RR',
    'unit_of_measurement': None,
  })
# ---
# name: test_select_entities[select.hallway_light_ramp_rate-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Hallway Light Ramp Rate',
      'options': list([
        '9.0 min',
        '8.0 min',
        '7.0 min',
        '6.0 min',
        '5.0 min',
        '4.5 min',
        '4.0 min',
        '3.5 min',
        '3.0 min',
        '2.5 min',
        '2.0 min',
        '1.5 min',
        '1.0 min',
        '47 s',
        '43 s',
        '38.5 s',
        '34 s',
        '32 s',
        '30 s',
        '28 s',
        '26 s',
        '23.5 s',
        '21.5 s',
        '19 s',
        '8.5 s',
        '6.5 s',
        '4.5 s',
        '2 s',
        '0.5 s',
        '0.3 s',
        '0.2 s',
        '0.1 s',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.hallway_light_ramp_rate',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '23.5 s',
  })
# ---
